# ojoya

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  cloudbuild.yaml  compose.yaml  dockerfile  dockerfile.prod
backend/: main.py  pyproject.toml  test_vertex.py
backend/api/v1/: router.py
backend/api/v1/endpoints/: analyze.py  appraisals.py  debug.py  health.py
backend/core/: config.py  firebase.py  firestore.py  llm_callbacks.py  logging.py  serpapi.py  storage.py
backend/features/agent/: graph.py  state.py
backend/features/agent/price/: node.py  schema.py
backend/features/agent/search/: __init__.py  node.py  schema.py
backend/features/agent/vision/: node.py  schema.py  serpapi_schema.py
docs/: agent.md  googlecloud.md  risk.md  vision_agent_test_urls.md  基本設計.md
docs/api/: analyze_endpoint.md
docs/frontend/: README.md  firebase_auth.md  firestore_schema.md  ui_guidelines.md
docs/plan/: floating-whising-newt.md
docs/vertex_ai_setup/: implementation_plan.md  task.md
frontend/: index.html  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/hooks/: useAppraisalHistory.ts  useAuth.ts  useAutoAuth.ts  useStreamingAnalysis.ts
frontend/src/lib/: api.ts  firebase.ts  streaming.ts
frontend/src/pages/AppraisalPage/: AppraisalPage.module.css  AppraisalPage.tsx  index.ts
frontend/src/styles/: globals.css  rpg-theme.css
frontend/src/types/: api.ts
plans/: idempotent-seeking-forest.md  rippling-snacking-pillow.md  snug-chasing-wand.md  squishy-conjuring-leaf.md  twinkly-conjuring-harp.md
test_images/: README.md
(+37 files in other folders)
